fixed spacing issues

--- a/projectsryles.css
+++ b/projectsryles.css
@@ -32,6 +32,9 @@ body {
   margin-top: 10px;
   height: 10vh;
 }
+.h1-wrap h1 {
+  text-shadow: 0px 1px 7px rgba(0, 0, 0, 0.11);
+}
 
 .links {
   display: none;
@@ -49,6 +52,7 @@ body {
   font-size: 2.5em;
   font-weight: 500;
   margin: 10px;
+  text-shadow: 0px 1px 7px rgba(0, 0, 0, 0.11);
 }
 
 .wrapper-1 {
@@ -206,7 +210,7 @@ body {
   }
 
   .h1-wrap h1 {
-    font-size: 5em;
+    font-size: 4.6em;
     margin: 0;
     margin-left: 0;
   }
@@ -242,6 +246,9 @@ body {
   .writing-wrapper h3 {
     font-size: 4em;
   }
+  .h1-wrap h1 {
+    font-size: 5em;
+  }
 }
 
 @media screen and (min-width: 1600px) {
@@ -258,5 +265,14 @@ body {
 
   .writing-wrapper p {
     font-size: 2em;
+  }
+  .wrapper-1 {
+    margin-bottom: 35px;
+  }
+}
+
+@media screen and (min-width: 2000px) {
+  .wrapper-1 {
+    width: 50vw;
   }
 }
